# objSpirit

./: CMakeLists.txt  README.md  objSpirit.cpp  objSpirit.h  objSpirit.pc.in
src/: objSpirit.cpp  objSpirit.hpp
